--- a/researchcn.html
+++ b/researchcn.html
@@ -286,36 +286,6 @@
 					-->
 				</td></tr>
 				<tr><td>
-					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>Attention-Driven Emotion Recognition in EEG: A Transformer-Based Approach with Cross-Dataset Fine-Tuning.</i> Ghous, G., Najam, S., Alshehri, M., Alshahrani, A., AlQahtani, Y., Jalal, A.*, and Liu, H.* (2025). IEEE Access.<br>
-					<!--
-					<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;
-					-->
-					<a href="https://www.researchgate.net/publication/390825580_Attention-Driven_Emotion_Recognition_in_EEG_A_Transformer-Based_Approach_with_Cross-Dataset_Fine-Tuning" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://ieeexplore.ieee.org/document/10965678" target="_blank" rel="noopener noreferrer"><img src="images/IEEE.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1109/ACCESS.2025.3561137" target="_blank" rel="noopener noreferrer">10.1109/ACCESS.2025.3561137</a>
-				</td></tr>
-				<tr><td>
-					<i>Unmanned Aerial Vehicle based Multi-Person Detection via Deep Neural Network Models.</i> Alshehri, M., Zahoor, L., Alqahtani, Y., Alshahrani, A., Al-Hammadi, D. A.,Jalal, A.*, and Liu, H.* (2025). Frontiers in Neurorobotics.<br>
-					<a href="https://scholar.google.com/scholar?q=Unmanned+Aerial+Vehicle+based+Multi-Person+Detection+via+Deep+Neural+Network+Models" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					<!--
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					-->
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/390853268_Unmanned_aerial_vehicle_based_multi-person_detection_via_deep_neural_network_models" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/neurorobotics/articles/10.3389/fnbot.2025.1582995" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fnbot.2025.1582995" target="_blank" rel="noopener noreferrer">10.3389/fnbot.2025.1582995</a>
-				</td></tr>
-				<tr><td>
-					<i>Advanced Biosignal-RGB Fusion with Adaptive Neurofuzzy Classification for High-Precision Action Recognition.</i> Abro, I. A., Alhasson, H. F., Alharbi, S. S., Alatiyyah, M., AlHammadi, D. A., Jalal, A.*, and Liu, H.* (2025). IEEE Access, 13:57287-57310.<br>
-					<a href="https://scholar.google.com/scholar?q=Advanced+Biosignal-RGB+Fusion+with+Adaptive+Neurofuzzy+Classification+for+High-Precision+Action+Recognition" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Advanced-Biosignal-RGB-Fusion-with-Adaptive-for-Abro-Alhasson/09fd858fbd11943b768d983aac0c2e4bcf24e38a" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/390087724_Advanced_Biosignal-RGB_Fusion_with_Adaptive_Neurofuzzy_Classification_for_High-Precision_Action_Recognition" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://ieeexplore.ieee.org/document/10935610" target="_blank" rel="noopener noreferrer"><img src="images/IEEE.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1109/ACCESS.2025.3553196" target="_blank" rel="noopener noreferrer">10.1109/ACCESS.2025.3553196</a>
-				</td></tr>
-				<tr><td>
 					<i>Thermo-environ-economic analysis of a novel solar-assisted heat pump system; comparison with conventional single stage and cascaded air source heat pumps.</i> Afshin, M. M. and Liu, H.* (2025). Energy, 322:135647. Elsevier<br>
 					<a href="https://scholar.google.com/scholar?q=Thermo-environ-economic+analysis+of+a+novel+solar-assisted+heat+pump+system%3B+comparison+with+conventional+single+stage+and+cascaded+air+source+heat+pumps" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Thermo-environ-economic-analysis-of-a-novel-heat-Manesh-Liu/b5444342a944baf5bc5b34741fc480f97b40cf61" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -357,12 +327,30 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1038/s41598-025-94689-5" target="_blank" rel="noopener noreferrer">10.1038/s41598-025-94689-5</a>
 				</td></tr>
 				<tr><td>
-					<i>Remote Sensing Surveillance using Multilevel Feature Fusion and Deep Neural Network.</i> Zahoor, L., Alhasson, H. F., Alnusayri, M., Alatiyyah, M., AlHammadi, D. A., Jalal, A.*, Liu, H.* (2025). IEEE Access, 13:38282-38300.<br>
-					<a href="https://scholar.google.com/scholar?q=Remote+Sensing+Surveillance+using+Multilevel+Feature+Fusion+and+Deep+Neural+Network" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Remote-Sensing-Surveillance-using-Multilevel-Fusion-Zahoor-Alhasson/cd8f9db2848e67b19d87869a2a0d7f9132639bc0" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/389007840_Remote_Sensing_Surveillance_using_Multilevel_Feature_Fusion_and_Deep_Neural_Network" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://ieeexplore.ieee.org/document/10890997" target="_blank" rel="noopener noreferrer"><img src="images/IEEE.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1109/ACCESS.2025.3542435" target="_blank" rel="noopener noreferrer">10.1109/ACCESS.2025.3542435</a>
+					<i>Attention-Driven Emotion Recognition in EEG: A Transformer-Based Approach with Cross-Dataset Fine-Tuning.</i> Ghous, G., Najam, S., Alshehri, M., Alshahrani, A., AlQahtani, Y., Jalal, A.*, and Liu, H.* (2025). IEEE Access.<br>
+					<a href="https://scholar.google.com/scholar?q=Attention-Driven+Emotion+Recognition+in+EEG%3A+A+Transformer-Based+Approach+with+Cross-Dataset+Fine-Tuning" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Attention-Driven-Emotion-Recognition-in-EEG%3A-A-with-Ghous-Najam/98012d1f5cf001b0a34d2646f2f1b27792ea545e" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/390825580_Attention-Driven_Emotion_Recognition_in_EEG_A_Transformer-Based_Approach_with_Cross-Dataset_Fine-Tuning" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://ieeexplore.ieee.org/document/10965678" target="_blank" rel="noopener noreferrer"><img src="images/IEEE.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1109/ACCESS.2025.3561137" target="_blank" rel="noopener noreferrer">10.1109/ACCESS.2025.3561137</a>
+				</td></tr>
+				<tr><td>
+					<i>Unmanned Aerial Vehicle based Multi-Person Detection via Deep Neural Network Models.</i> Alshehri, M., Zahoor, L., Alqahtani, Y., Alshahrani, A., Al-Hammadi, D. A.,Jalal, A.*, and Liu, H.* (2025). Frontiers in Neurorobotics.<br>
+					<a href="https://scholar.google.com/scholar?q=Unmanned+Aerial+Vehicle+based+Multi-Person+Detection+via+Deep+Neural+Network+Models" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					<!--
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					-->
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/390853268_Unmanned_aerial_vehicle_based_multi-person_detection_via_deep_neural_network_models" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/neurorobotics/articles/10.3389/fnbot.2025.1582995" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fnbot.2025.1582995" target="_blank" rel="noopener noreferrer">10.3389/fnbot.2025.1582995</a>
+				</td></tr>
+				<tr><td>
+					<i>Advanced Biosignal-RGB Fusion with Adaptive Neurofuzzy Classification for High-Precision Action Recognition.</i> Abro, I. A., Alhasson, H. F., Alharbi, S. S., Alatiyyah, M., AlHammadi, D. A., Jalal, A.*, and Liu, H.* (2025). IEEE Access, 13:57287-57310.<br>
+					<a href="https://scholar.google.com/scholar?q=Advanced+Biosignal-RGB+Fusion+with+Adaptive+Neurofuzzy+Classification+for+High-Precision+Action+Recognition" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Advanced-Biosignal-RGB-Fusion-with-Adaptive-for-Abro-Alhasson/09fd858fbd11943b768d983aac0c2e4bcf24e38a" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/390087724_Advanced_Biosignal-RGB_Fusion_with_Adaptive_Neurofuzzy_Classification_for_High-Precision_Action_Recognition" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://ieeexplore.ieee.org/document/10935610" target="_blank" rel="noopener noreferrer"><img src="images/IEEE.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1109/ACCESS.2025.3553196" target="_blank" rel="noopener noreferrer">10.1109/ACCESS.2025.3553196</a>
 				</td></tr>
 				<tr><td>
 					<i>Evaluating the Potential of Microdroplet Flow in Two-Phase Biocatalysis: A Systematic Study.</i> Xiang, L., Solarczek, J., Krajka, V., Liu, H., Ahlborn, L., Schallmey, A., and Constantinou, I.* (2025). ACS Applied Materials & Interfaces, 17(3):4776–4787. ACS Publications.<br>
@@ -404,6 +392,14 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/389182487_Drone-Based_Public_Surveillance_Using_3D_Point_Clouds_and_Neuro-Fuzzy_Classifier" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.techscience.com/cmc/online/detail/22607" target="_blank" rel="noopener noreferrer"><img src="images/Tech_Science_Press.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.32604/cmc.2025.059224" target="_blank" rel="noopener noreferrer">10.32604/cmc.2025.059224</a>
+				</td></tr>
+				<tr><td>
+					<i>Remote Sensing Surveillance using Multilevel Feature Fusion and Deep Neural Network.</i> Zahoor, L., Alhasson, H. F., Alnusayri, M., Alatiyyah, M., AlHammadi, D. A., Jalal, A.*, Liu, H.* (2025). IEEE Access, 13:38282-38300.<br>
+					<a href="https://scholar.google.com/scholar?q=Remote+Sensing+Surveillance+using+Multilevel+Feature+Fusion+and+Deep+Neural+Network" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Remote-Sensing-Surveillance-using-Multilevel-Fusion-Zahoor-Alhasson/cd8f9db2848e67b19d87869a2a0d7f9132639bc0" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/389007840_Remote_Sensing_Surveillance_using_Multilevel_Feature_Fusion_and_Deep_Neural_Network" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://ieeexplore.ieee.org/document/10890997" target="_blank" rel="noopener noreferrer"><img src="images/IEEE.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1109/ACCESS.2025.3542435" target="_blank" rel="noopener noreferrer">10.1109/ACCESS.2025.3542435</a>
 				</td></tr>
 				<tr><td>
 					<i>TPRO-NET: An EEG-Based Emotion Recognition Method Reflecting Subtle Changes in Emotion.</i> Zhang, X., Cheng, X.*, and Liu, H.* (2024). Scientific Reports, 14:13491. Springer Nature.<br>
