--- a/enkas/こ.html
+++ b/enkas/こ.html
@@ -8,6 +8,7 @@
 <a href="..\indexenka.html" id="こ">Enka Category</a><br><br>
 <h2>
 こ<br><br>
+<a href="#こんなベッピン見たことない">こんなベッピン見たことない</a><br>
 <a href="#子連れ狼">子連れ狼</a><br>
 <a href="#心の旅">心の旅</a><br>
 <a href="#心の糸">心の糸</a><br>
@@ -20,6 +21,45 @@
 <a href="#粉雪">粉雪</a><br>
 <a href="#荒城の月">荒城の月</a><br>
 </h2>
+<br><hr><br><h1>
+<a id="こんなベッピン見たことない">【こんなベッピン見たことない】</a>G1-C3<br>
+<br>
+１  こんなベッピン見たことない<br>
+とかなんとかおっしゃって　（イヤマッタク）<br>
+あなたのお口のうまいこと　（エー）<br>
+その手は桑名のはまぐりよ　（アラソウ）<br>
+だけど何だかそわそわするの　（トコドッコイサ）<br>
+アラ　どうしましょう　どうしましょう<br>
+ホーニ　ホニホニホニ　浮いてきた　（ソラネ）<br>
+ホーニ　ホニホニホニ　浮いてきた<br>
+<br>
+２  こんなベッピン見たことない<br>
+とかなんとかおっしゃって　（イヤマッタク）<br>
+浮気な恋など<ruby><rb>真平</rb><rt>しんべい</rt></ruby>を　（エー）<br>
+私はこれでも<ruby><rb>純情</rb><rt>じゅんじょう</rt></ruby>よう　（アラソウ）<br>
+咲いた花なら散らない<ruby><rb>内</rb><rt>うち</rt></ruby>に　（トコドッコイサ）<br>
+アラ　どうしましょう　どうしましょう<br>
+ホーニ　ホニホニホニ　浮いてきた　（ソラネ）<br>
+ホーニ　ホニホニホニ　浮いてきた<br>
+<br>
+３  こんなベッピン見たことない<br>
+とかなんとかおっしゃって　（イヤマッタク）<br>
+私にお酒を<ruby><rb>呑</rb><rt>の</rt></ruby>ますのね　（エー）<br>
+無理やりつぐのはずるいわよ　（アラソウ）<br>
+酒に酔わせてどうする気なの　（トコドッコイサ）<br>
+アラ　どうしましょう　どうしましょう<br>
+ホーニ　ホニホニホニ　浮いてきた　（ソラネ）<br>
+ホーニ　ホニホニホニ　浮いてきた<br>
+<br>
+４  こんなベッピン見たことない<br>
+とかなんとかおっしゃって　（イヤマッタク）<br>
+お世辞でないならうれしいわ　（エー）<br>
+本当心が欲しいのよ　（アラソウ）<br>
+恋は女の命じゃないの　（トコドッコイサ）<br>
+アラ　どうしましょう　どうしましょう<br>
+ホーニ　ホニホニホニ　浮いてきた　（ソラネ）<br>
+ホーニ　ホニホニホニ　浮いてきた<br>
+</h1><br><h3><a href="#こ">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="子連れ狼">【子連れ狼】</a>D1-A2<br>
 <br>
