--- a/research.html
+++ b/research.html
@@ -334,10 +334,8 @@
 				</td></tr>
 				<tr><td>
 					<i>Unmanned Aerial Vehicle based Multi-Person Detection via Deep Neural Network Models.</i> Alshehri, M., Zahoor, L., Alqahtani, Y., Alshahrani, A., Al-Hammadi, D. A.,Jalal, A.*, and Liu, H.* (2025). Frontiers in Neurorobotics.<br>
-					<a href="https://scholar.google.com/scholar?q=Unmanned+Aerial+Vehicle+based+Multi-Person+Detection+via+Deep+Neural+Network+Models" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					<!--
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					-->
+					<a href="https://scholar.google.com/scholar?q=Unmanned+Aerial+Vehicle+based+wMulti-Person+Detection+via+Deep+Neural+Network+Models" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Unmanned-aerial-vehicle-based-multi-person-via-deep-Alshehri-Zahoor/dcd9ed949031563c146aad83b0484d0a56d1b1b6" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/390853268_Unmanned_aerial_vehicle_based_multi-person_detection_via_deep_neural_network_models" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/neurorobotics/articles/10.3389/fnbot.2025.1582995" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fnbot.2025.1582995" target="_blank" rel="noopener noreferrer">10.3389/fnbot.2025.1582995</a>
@@ -611,10 +609,8 @@
 				<tr><td>
 					<i>Longitudinal Data Acquisition for AI Services in Long-Term Care Facilities for Older Adults. </i> Paul, R. E., Kock, P., Hartmann, Y., Ball, E., Seibert, K., Liu, H., and Schultz, T. (2025). In BIOSTEC 2025 - Proceedings of the 18th International Joint Conference on Biomedical Engineering Systems and Technologies - Volume 2: HEALTHINF, pages 1099-1110. INSTICC, SciTePress.<br>
 					<a href="https://scholar.google.com/scholar?q=Longitudinal+Data+Acquisition+for+AI+Services+in+Long-Term+Care+Facilities+for+Older+Adults" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					<!--
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-					-->
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Longitudinal-Data-Acquisition-for-AI-Services-in-Paul-Kock/dd4c3d35738cdbd631c63d033f3bfdb71ea386f1" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/390857914_Longitudinal_Data_Acquisition_for_AI_Services_in_Long-Term_Care_Facilities_for_Older_Adults" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.scitepress.org/Link.aspx?doi=10.5220/0013403900003911" target="_blank" rel="noopener noreferrer"><img src="images/SciTePress.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.5220/0013403900003911" target="_blank" rel="noopener noreferrer">10.5220/0013403900003911</a>
 				</td></tr>
