--- a/publications.html
+++ b/publications.html
@@ -232,7 +232,7 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1109/ACCESS.2025.3526888" target="_blank" rel="noopener noreferrer">10.1109/ACCESS.2025.3526888</a>
 	</td></tr>
 	<tr><td>
-	<i>IoT Powered RNN for Improved Human Activity Recognition with Enhanced Localization and Classification.</i> Mudawi, N. A., Azmat, U., Alazeb, A., Alhasson, H. F., Alabdullah, B., Rahman, H.*, Liu, H., and Jalal, A.* (2025). Scientific Reports. Springer Nature.<br>
+	<i>IoT Powered RNN for Improved Human Activity Recognition with Enhanced Localization and Classification.</i> Mudawi, N. A., Azmat, U., Alazeb, A., Alhasson, H. F., Alabdullah, B., Rahman, H.*, Liu, H., and Jalal, A.* (2025). Scientific Reports, 15:10328. Springer Nature.<br>
 		<a href="https://scholar.google.com/scholar?q=IoT+Powered+RNN+for+Improved+Human+Activity+Recognition+with+Enhanced+Localization+and+Classification" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/IoT-powered-RNN-for-improved-human-activity-with-Mudawi-Azmat/17133d2e3a7a373249700481dbe04c08d6b051e1" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/390178040_IoT_powered_RNN_for_improved_human_activity_recognition_with_enhanced_localization_and_classification" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
@@ -249,7 +249,7 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1109/ACCESS.2025.3561137" target="_blank" rel="noopener noreferrer">10.1109/ACCESS.2025.3561137</a>
 	</td></tr>
 	<tr><td>
-		<i>Unmanned Aerial Vehicle based Multi-Person Detection via Deep Neural Network Models.</i> Alshehri, M., Zahoor, L., Alqahtani, Y., Alshahrani, A., Al-Hammadi, D. A.,Jalal, A.*, and Liu, H.* (2025). Frontiers in Neurorobotics.<br>
+		<i>Unmanned Aerial Vehicle based Multi-Person Detection via Deep Neural Network Models.</i> Alshehri, M., Zahoor, L., Alqahtani, Y., Alshahrani, A., Al-Hammadi, D. A.,Jalal, A.*, and Liu, H.* (2025). Frontiers in Neurorobotics, 19:1582995.<br>
 		<a href="https://scholar.google.com/scholar?q=Unmanned+Aerial+Vehicle+based+wMulti-Person+Detection+via+Deep+Neural+Network+Models" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Unmanned-aerial-vehicle-based-multi-person-via-deep-Alshehri-Zahoor/dcd9ed949031563c146aad83b0484d0a56d1b1b6" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/390853268_Unmanned_aerial_vehicle_based_multi-person_detection_via_deep_neural_network_models" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
