--- a/research.html
+++ b/research.html
@@ -814,7 +814,8 @@
 				<tr>
 					<td align="center">Program Co-Chair (Co-PC)</td>
 					<td>
-						&#9679; <a href="https://biosignals.scitevents.org/?y=2024" target="_blank" rel="noopener noreferrer"><img src="images/BIOSIGNALS2024.png" height="12"></a> – 17<sup>th</sup> International Conference on Bio-Inspired Systems and Signal Processing (in <a href="https://biostec.scitevents.org/?y=2024" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2024.png" height="12"></a>), Rome, Itaty
+						&#9679; <a href="https://biosignals.scitevents.org/?y=2024" target="_blank" rel="noopener noreferrer"><img src="images/BIOSIGNALS2024.png" height="12"></a> – 17<sup>th</sup> International Conference on Bio-Inspired Systems and Signal Processing (in <a href="https://biostec.scitevents.org/?y=2024" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2024.png" height="12"></a>), Rome, Itaty<br>
+						&#9679; <a href="https://biosignals.scitevents.org/?y=2026" target="_blank" rel="noopener noreferrer"><img src="images/BIOSIGNALS2026.png" height="12"></a> – 19<sup>th</sup> International Conference on Bio-Inspired Systems and Signal Processing (in <a href="https://biostec.scitevents.org/?y=2026" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2026.png" height="12"></a>), Marbella, Spain
 					</td>
 				</tr>
 				<tr>
@@ -841,7 +842,7 @@
 				<tr>
 					<td align="center">Doctoral Consortium Co-Chair</td>
 					<td>
-						&#9679; <a href="https://biostec.scitevents.org/DoctoralConsortium.aspx" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2025.png" height="12"></a> – 18<sup>th</sup> International Joint Conference on Biomedical Engineering Systems and Technologies, Porto, Portugal
+						&#9679; <a href="https://biostec.scitevents.org/DoctoralConsortium.aspx/?y=2025" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2025.png" height="12"></a> – 18<sup>th</sup> International Joint Conference on Biomedical Engineering Systems and Technologies, Porto, Portugal
 					</td>
 				</tr>
 				<tr>
