--- a/researchcn.html
+++ b/researchcn.html
@@ -803,7 +803,7 @@
 				<tr>
 					<td align="center">学术会议联合主席（Co-Chair）</td>
 					<td>
-					&#9679; <a href="https://www.is-aii.org/committees/" target="_blank" rel="noopener noreferrer"><img src="images/IS-ALL2025.png" height="15"></a> 2025 – International Symposium on Artificial Intelligence Innovations, 中国贵阳<br>
+						&#9679; <a href="https://www.is-aii.org/committees/" target="_blank" rel="noopener noreferrer"><img src="images/IS-ALL2025.png" height="15"></a> 2025 – International Symposium on Artificial Intelligence Innovations, 中国贵阳<br>
 						&#9679; <a href="https://www.icairsa.net/?page_id=9629" target="_blank" rel="noopener noreferrer"><img src="images/AIRSA2025.png" height="15"></a> 2025 – International Confer	ence on Artificial Intelligence and Remote Sensing Applications, 中国长沙
 					</td>
 				</tr>
@@ -816,7 +816,8 @@
 				<tr>
 					<td align="center">学术会议程序委员会联合主席（Co-PC）</td>
 					<td>
-						&#9679; <a href="https://biosignals.scitevents.org/?y=2024" target="_blank" rel="noopener noreferrer"><img src="images/BIOSIGNALS2024.png" height="12"></a> – 17<sup>th</sup> International Conference on Bio-Inspired Systems and Signal Processing (in <a href="https://biostec.scitevents.org/?y=2024" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2024.png" height="12"></a>), 意大利罗马
+						&#9679; <a href="https://biosignals.scitevents.org/?y=2024" target="_blank" rel="noopener noreferrer"><img src="images/BIOSIGNALS2024.png" height="12"></a> – 17<sup>th</sup> International Conference on Bio-Inspired Systems and Signal Processing (in <a href="https://biostec.scitevents.org/?y=2024" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2024.png" height="12"></a>), 意大利罗马<br>
+						&#9679; <a href="https://biosignals.scitevents.org/?y=2026" target="_blank" rel="noopener noreferrer"><img src="images/BIOSIGNALS2026.png" height="12"></a> – 19<sup>th</sup> International Conference on Bio-Inspired Systems and Signal Processing (in <a href="https://biostec.scitevents.org/?y=2026" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2026.png" height="12"></a>), 西班牙马贝拉
 					</td>
 				</tr>
 				<tr>
@@ -843,7 +844,7 @@
 				<tr>
 					<td align="center">博士生论坛联合主席（Doctoral Consortium Co-Chair）</td>
 					<td>
-						&#9679; <a href="https://biostec.scitevents.org/DoctoralConsortium.aspx" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2025.png" height="12"></a> – 18<sup>th</sup> International Joint Conference on Biomedical Engineering Systems and Technologies, 葡萄牙波尔图
+						&#9679; <a href="https://biostec.scitevents.org/DoctoralConsortium.aspx/?y=2025" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2025.png" height="12"></a> – 18<sup>th</sup> International Joint Conference on Biomedical Engineering Systems and Technologies, 葡萄牙波尔图
 					</td>
 				</tr>
 				<tr>
