--- a/research.html
+++ b/research.html
@@ -1348,14 +1348,14 @@
 
 				<tr>
 					<td align="center">
-						<img src="images/students/Kilian_Lüdemann.jpg" width="150" class="round"></a><br>
+						<img src="images/students/Male.png" width="150" class="round"></a><br>
 						&copy;<b>Kilian Lüdemann</b>
 					</td>
 					<td>
 						Bachelor thesis 2021 @ Bremen, Germany<br>
 						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Fall detection based on infrared videos using RNN
 						<br><br>
-						&rarr;  Software engineer @ RealCore Group, Essen
+						&rarr;  Software engineer @ Essen
 					</td>
 				</tr>
 
