--- a/researchcn.html
+++ b/researchcn.html
@@ -1346,14 +1346,14 @@
 
 				<tr>
 					<td align="center">
-						<img src="images/students/Kilian_Lüdemann.jpg" width="150" class="round"></a><br>
+						<img src="images/students/Male.png" width="150" class="round"></a><br>
 						&copy;<b>Kilian Lüdemann（德）</b>
 					</td>
 					<td>
 						本科毕设 2021 @ 德国不来梅（等级：“好”）<br>
 						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 基于RNN的红外视频摔倒识别
 						<br><br>
-						&rarr;  软件工程师 @ RealCore集团（埃森）
+						&rarr;  软件工程师 @ 埃森
 						</td>
 				</tr>
 
