--- a/publications.html
+++ b/publications.html
@@ -101,7 +101,7 @@
 
 	<tr><td>
 		<img src="images/Journal.png" height="15">&nbsp;&nbsp;
-		<img src="images/4.png" height="15"><img src="images/3.png" height="15">&nbsp;&nbsp;|&nbsp;
+		<img src="images/4.png" height="15"><img src="images/4.png" height="15">&nbsp;&nbsp;|&nbsp;
 		<img src="images/Hot_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 0.1% on <img src="images/WoS.png" height="15" class = "pop1">)&nbsp;&nbsp;|&nbsp;
 		<img src="images/Highly_Cited_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 1%)
 	</td></tr>
@@ -189,6 +189,18 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
 		-->
 	</td></tr>
+	<tr><td>
+		<img src="images/Forthcoming.png" height="20" class = "pop1">
+		<i>Multimodal Intelligent Biosensors Framework for Fall Disease Detection and Healthcare Monitoring.</i> Abro, I. A., Alharbi, S. S., Alshammari, N. S., Algarni, S., Almujally, N. A., Jalal, A.*, and Liu, H.* (2025). Frontiers in Bioengineering and Biotechnology.<br>
+		<!--
+		<a href="https://scholar.google.com/scholar?q=Multimodal+Intelligent+Biosensors+Framework+for+Fall+Disease+Detection+and+Healthcare+Monitoring" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+		-->
+	</td></tr>
+
 	<tr><td>
 		<img src="images/Forthcoming.png" height="20" class = "pop1">
 		<i>Multi-Modal Remote Sensory Learning for Multi-Objects over Autonomous Devices.</i> Naseer, A., Almudawi, N., Aljuaid, H., Alazeb, A., Alqahtani, Y., Algarni, A., Jalal, A.*, and Liu, H.* (2025). Frontiers in Bioengineering and Biotechnology.<br>
