--- a/researchcn.html
+++ b/researchcn.html
@@ -103,7 +103,7 @@
 
 			<tr><td></td></tr><tr><td></td></tr>
 		
-			<tr><td><h1 align="left"><span style="text-decoration: overline">论文发表（73）</span></h1> SCI总影响因子=178.2，其中一作/通讯总影响因子=145.4</td></tr>
+			<tr><td><h1 align="left"><span style="text-decoration: overline">论文发表（74）</span></h1> SCI总影响因子=182.5，其中一作/通讯总影响因子=149.7</td></tr>
 			<tr><td><table align="left" cellpadding="15">
 			
 				<tr><td>
@@ -187,7 +187,7 @@
 			
 				<tr><td>
 					<img src="images/Journal.png" height="15">&nbsp;&nbsp;
-					<img src="images/4.png" height="15"><img src="images/3.png" height="15">&nbsp;&nbsp;|&nbsp;
+					<img src="images/4.png" height="15"><img src="images/4.png" height="15">&nbsp;&nbsp;|&nbsp;
 					<img src="images/Hot_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 0.1% on <img src="images/WoS.png" height="15" class = "pop1">)&nbsp;&nbsp;|&nbsp;
 					<img src="images/Highly_Cited_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 1%)
 				</td></tr>
@@ -268,7 +268,7 @@
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
 					<i>Towards Human Modeling for Human-Robot Collaboration and Digital Twins in Industrial Environments: Research Status, Prospects, and Challenges.</i> Xia, G.*, Ghrairi, Z., Wuest, T., Hribernik, K., Heuermann, A., Liu, F., Liu, H., Thoben, K. (2025). Robotics and Computer-Integrated Manufacturing.<br>
 					<!--
-					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					<a href="https://scholar.google.com/scholar?q=Towards+Human+Modeling+for+Human-Robot+Collaboration+and+Digital+Twins+in+Industrial+Environments%3A+Research+Status%2C+Prospects%2C+and+Challenges" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Elsevier.png" height="15"></a>
@@ -277,24 +277,36 @@
 				</td></tr>
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>Multi-Modal Remote Sensory Learning for Multi-Objects over Autonomous Devices.</i> Naseer, A., Almudawi, N., Aljuaid, H., Alazeb, A., Alqahtani, Y., Algarni, A., Jalal, A.*, and Liu, H.* (2025). Frontiers in Bioengineering and Biotechnology.<br>
+					<i>Multimodal Intelligent Biosensors Framework for Fall Disease Detection and Healthcare Monitoring.</i> Abro, I. A., Alharbi, S. S., Alshammari, N. S., Algarni, S., Almujally, N. A., Jalal, A.*, and Liu, H.* (2025). Frontiers in Bioengineering and Biotechnology.<br>
 					<!--
-					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					<a href="https://scholar.google.com/scholar?q=Multimodal+Intelligent+Biosensors+Framework+for+Fall+Disease+Detection+and+Healthcare+Monitoring" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
-				-->
+					-->
+				</td></tr>
+			
+				<tr><td>
+					<img src="images/Forthcoming.png" height="20" class = "pop1">
+					<i>Multi-Modal Remote Sensory Learning for Multi-Objects over Autonomous Devices.</i> Naseer, A., Almudawi, N., Aljuaid, H., Alazeb, A., Alqahtani, Y., Algarni, A., Jalal, A.*, and Liu, H.* (2025). Frontiers in Bioengineering and Biotechnology.<br>
+					<a href="https://scholar.google.com/scholar?q=Multi-Modal+Remote+Sensory+Learning+for+Multi-Objects+over+Autonomous+Devices" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2025.1430222" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+					<!--
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2025.1430222" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2025.1430222</a>
+					-->
 				</td></tr>
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
 					<i>Wearable Sensors-based Assistive Technologies for Patient Health Monitoring.</i> Almujally, N. A., Khan, D., Al Mudawi, N., Alonazi, M., Algarni, A., Jalal, A.*, and Liu, H.* (2025). Frontiers in Bioengineering and Biotechnology.<br>
+					<a href=Wearable+Sensors-based+Assistive+Technologies+for+Patient+Health+Monitoring" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2025.1437877" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 					<!--
-					<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2025.1437877" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2025.1437877</a>
 					-->
 				</td></tr>
 				<tr><td>
@@ -339,7 +351,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1038/s41598-025-94689-5" target="_blank" rel="noopener noreferrer">10.1038/s41598-025-94689-5</a>
 				</td></tr>
 				<tr><td>
-					<i>Attention-Driven Emotion Recognition in EEG: A Transformer-Based Approach with Cross-Dataset Fine-Tuning.</i> Ghous, G., Najam, S., Alshehri, M., Alshahrani, A., AlQahtani, Y., Jalal, A.*, and Liu, H.* (2025). IEEE Access.<br>
+					<i>Attention-Driven Emotion Recognition in EEG: A Transformer-Based Approach with Cross-Dataset Fine-Tuning.</i> Ghous, G., Najam, S., Alshehri, M., Alshahrani, A., AlQahtani, Y., Jalal, A.*, and Liu, H.* (2025). IEEE Access, 13:69369-69394.<br>
 					<a href="https://scholar.google.com/scholar?q=Attention-Driven+Emotion+Recognition+in+EEG%3A+A+Transformer-Based+Approach+with+Cross-Dataset+Fine-Tuning" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Attention-Driven-Emotion-Recognition-in-EEG%3A-A-with-Ghous-Najam/98012d1f5cf001b0a34d2646f2f1b27792ea545e" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/390825580_Attention-Driven_Emotion_Recognition_in_EEG_A_Transformer-Based_Approach_with_Cross-Dataset_Fine-Tuning" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
