--- a/research.html
+++ b/research.html
@@ -264,27 +264,15 @@
 				</td></tr>
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>Towards Human Modeling for Human-Robot Collaboration and Digital Twins in Industrial Environments: Research Status, Prospects, and Challenges.</i> Xia, G.*, Ghrairi, Z., Wuest, T., Hribernik, K., Heuermann, A., Liu, F., Liu, H., Thoben, K. (2025). Robotics and Computer-Integrated Manufacturing.<br>
-					<!--
-					<a href="https://scholar.google.com/scholar?q=Towards+Human+Modeling+for+Human-Robot+Collaboration+and+Digital+Twins+in+Industrial+Environments%3A+Research+Status%2C+Prospects%2C+and+Challenges" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Elsevier.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
-					-->
-				</td></tr>
-				<tr><td>
-					<img src="images/Forthcoming.png" height="20" class = "pop1">
 					<i>Multimodal Intelligent Biosensors Framework for Fall Disease Detection and Healthcare Monitoring.</i> Abro, I. A., Alharbi, S. S., Alshammari, N. S., Algarni, S., Almujally, N. A., Jalal, A.*, and Liu, H.* (2025). Frontiers in Bioengineering and Biotechnology.<br>
-					<!--
 					<a href="https://scholar.google.com/scholar?q=Multimodal+Intelligent+Biosensors+Framework+for+Fall+Disease+Detection+and+Healthcare+Monitoring" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2025.1544968" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+					<!--
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2025.1544968" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2025.1544968</a>
 					-->
 				</td></tr>
-			
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
 					<i>Multi-Modal Remote Sensory Learning for Multi-Objects over Autonomous Devices.</i> Naseer, A., Almudawi, N., Aljuaid, H., Alazeb, A., Alqahtani, Y., Algarni, A., Jalal, A.*, and Liu, H.* (2025). Frontiers in Bioengineering and Biotechnology.<br>
@@ -306,6 +294,14 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2025.1437877" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2025.1437877</a>
 					-->
+				</td></tr>
+				<tr><td>
+					<i>Towards Human Modeling for Human-Robot Collaboration and Digital Twins in Industrial Environments: Research Status, Prospects, and Challenges.</i> Xia, G.*, Ghrairi, Z., Wuest, T., Hribernik, K., Heuermann, A., Liu, F., Liu, H., Thoben, K. (2025). Robotics and Computer-Integrated Manufacturing.<br>
+					<a href="https://scholar.google.com/scholar?q=Towards+Human+Modeling+for+Human-Robot+Collaboration+and+Digital+Twins+in+Industrial+Environments%3A+Research+Status%2C+Prospects%2C+and+Challenges" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Towards-Human-Modeling-for-Human-Robot-and-Digital-Xia-Ghrairi/e0045bf565ed6c1bafb14d880478802d6dedd835" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/391344160_Towards_Human_Modeling_for_Human-Robot_Collaboration_and_Digital_Twins_in_Industrial_Environments_Research_Status_Prospects_and_Challenges" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.sciencedirect.com/science/article/pii/S0736584525000973" target="_blank" rel="noopener noreferrer"><img src="images/Elsevier.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1016/j.rcim.2025.103043" target="_blank" rel="noopener noreferrer">10.1016/j.rcim.2025.103043</a>
 				</td></tr>
 				<tr><td>
 					<i>Thermo-environ-economic analysis of a novel solar-assisted heat pump system; comparison with conventional single stage and cascaded air source heat pumps.</i> Afshin, M. M. and Liu, H.* (2025). Energy, 322:135647. Elsevier<br>
