--- a/researchcn.html
+++ b/researchcn.html
@@ -306,7 +306,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1016/j.rcim.2025.103043" target="_blank" rel="noopener noreferrer">10.1016/j.rcim.2025.103043</a>
 				</td></tr>
 				<tr><td>
-					<i>Thermo-environ-economic analysis of a novel solar-assisted heat pump system; comparison with conventional single stage and cascaded air source heat pumps.</i> Afshin, M. M. and Liu, H.* (2025). Energy, 322:135647. Elsevier<br>
+					<i>Thermo-Environ-Economic Analysis of a Novel Solar-Assisted Heat Pump System; Comparison with Conventional Single Stage and Cascaded Air Source Heat Pumps.</i> Afshin, M. M. and Liu, H.* (2025). Energy, 322:135647. Elsevier<br>
 					<a href="https://scholar.google.com/scholar?q=Thermo-environ-economic+analysis+of+a+novel+solar-assisted+heat+pump+system%3B+comparison+with+conventional+single+stage+and+cascaded+air+source+heat+pumps" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Thermo-environ-economic-analysis-of-a-novel-heat-Manesh-Liu/b5444342a944baf5bc5b34741fc480f97b40cf61" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/389881579_Thermo-environ-economic_analysis_of_a_novel_solar-assisted_heat_pump_system_comparison_with_conventional_single_stage_and_cascaded_air_source_heat_pumps" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
