--- a/researchcn.html
+++ b/researchcn.html
@@ -81,7 +81,7 @@
 						&#9679; 隐马尔可夫模型 <a href="https://scholar.google.com/citations?view_op=search_authors&mauthors=label:hidden_markov_model" target="_blank" rel="noopener noreferrer">Hidden Markov Models</a> (3)<br>
 						&#9679; 多源传感器数据融合 <a href="https://scholar.google.com/citations?view_op=search_authors&mauthors=label:sensor_data_fusion" target="_blank" rel="noopener noreferrer">Sensor Data Fusion</a> (13)<br>
 						&#9679; 中国音乐 <a href="https://scholar.google.com/citations?view_op=search_authors&mauthors=label:chinese_music" target="_blank" rel="noopener noreferrer">Chinese Music</a> (1)<br>
-						&#9679; 智慧建筑 <a href="https://scholar.google.com/citations?view_op=search_authors&mauthors=label:folk_music" target="_blank" rel="noopener noreferrer">Folk Music</a> (14)
+						&#9679; 智慧建筑 <a href="https://scholar.google.com/citations?view_op=search_authors&mauthors=label:smart_building" target="_blank" rel="noopener noreferrer">Folk Music</a> (15)
 					</td>
 					<td>
 					<!--
