--- a/publications.html
+++ b/publications.html
@@ -101,7 +101,7 @@
 
 	<tr><td>
 		<img src="images/Journal.png" height="15">&nbsp;&nbsp;
-		<img src="images/4.png" height="15"><img src="images/6.png" height="15">&nbsp;&nbsp;|&nbsp;
+		<img src="images/4.png" height="15"><img src="images/7.png" height="15">&nbsp;&nbsp;|&nbsp;
 		<img src="images/Hot_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 0.1% on <img src="images/WoS.png" height="15" class = "pop1">)&nbsp;&nbsp;|&nbsp;
 		<img src="images/Highly_Cited_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 1%)
 	</td></tr>
@@ -178,6 +178,8 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/articles/10.3389/fnbot.2024.1398703" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fnbot.2024.1398703" target="_blank" rel="noopener noreferrer">10.3389/fnbot.2024.1398703</a>
 	</td></tr>
+
+
 	<tr><td>
 		<img src="images/Forthcoming.png" height="20" class = "pop1">
 		<i>Multimodal Intelligent Biosensors Framework for Fall Disease Detection and Healthcare Monitoring.</i> Abro, I. A., Alharbi, S. S., Alshammari, N. S., Algarni, S., Almujally, N. A., Jalal, A.*, and Liu, H.* (2025). Frontiers in Bioengineering and Biotechnology. ISSN: 2296-4185.<br>
@@ -207,29 +209,35 @@
 		<a href="https://scholar.google.com/scholar?q=A+Deep+Learning+Framework+for+Healthy+LifeStyle+Monitoring+and+Outdoor+Localization" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
  		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="" target="_blank" rel="noopener noreferrer"></a>
 		-->
 	</td></tr>
 	<tr><td>
 		<img src="images/Forthcoming.png" height="20" class = "pop1">
-		<i>Advanced Leaf Classification using Multi-Layer Perceptron for Smart Crop Management.</i> Mumtaz S., Alshehri M., AlQahtani Y., Alshahrani A., Alabdullah, B., Alhasson, H. F., Jalal, A.*, and Liu, H.* (2025). IEEE Access.<br>
+		<i>A Hybrid Deep Learning Pipeline for Wearable Sensors-based Human Activity Recognition.</i> Algarni, A., Abro, I. A., Alshehri, M., AlQahtani, Y., Alshahrani, A., and Liu, H.* (2025). Computer, Materials & Continuah. Tech Science Press. ISSN: 1546-2218.<br>
 		<!--
-		<a href="https://scholar.google.com/scholar?q=The+Advanced+Leaf+Classification+using+Multi-Layer+Perceptron+for+Smart+Crop+Management" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
- 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="" target="_blank" rel="noopener noreferrer"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
 		-->
 	</td></tr>
-
-	<tr><td>
+	
+	<tr><td>   
 		<i>Towards Human Modeling for Human-Robot Collaboration and Digital Twins in Industrial Environments: Research Status, Prospects, and Challenges.</i> Xia, G.*, Ghrairi, Z., Wuest, T., Hribernik, K., Heuermann, A., Liu, F., Liu, H., Thoben, K. (2025). Robotics and Computer-Integrated Manufacturing.<br>
 		<a href="https://scholar.google.com/scholar?q=Towards+Human+Modeling+for+Human-Robot+Collaboration+and+Digital+Twins+in+Industrial+Environments%3A+Research+Status%2C+Prospects%2C+and+Challenges" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Towards-Human-Modeling-for-Human-Robot-and-Digital-Xia-Ghrairi/e0045bf565ed6c1bafb14d880478802d6dedd835" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/391344160_Towards_Human_Modeling_for_Human-Robot_Collaboration_and_Digital_Twins_in_Industrial_Environments_Research_Status_Prospects_and_Challenges" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.sciencedirect.com/science/article/pii/S0736584525000973" target="_blank" rel="noopener noreferrer"><img src="images/Elsevier.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1016/j.rcim.2025.103043" target="_blank" rel="noopener noreferrer">10.1016/j.rcim.2025.103043</a>
+	</td></tr>
+	<tr><td>
+		<i>Advanced Leaf Classification using Multi-Layer Perceptron for Smart Crop Management.</i> Mumtaz S., Alshehri M., AlQahtani Y., Alshahrani A., Alabdullah, B., Alhasson, H. F., Jalal, A.*, and Liu, H.* (2025). IEEE Access.<br>
+		<a href="https://scholar.google.com/scholar?q=Advanced+Leaf+Classification+using+Multi-Layer+Perceptron+for+Smart+Crop+Management" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Advanced-Leaf-Classification-using-Multi-Layer-for-Mumtaz-Alshehri/44e3d0856aa58ec611b26a35cd48fc79a955615d" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/392040833_Advanced_Leaf_Classification_using_Multi-Layer_Perceptron_for_Smart_Crop_Management" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://ieeexplore.ieee.org/document/11014056" target="_blank" rel="noopener noreferrer"><img src="images/IEEE.png" height="15"></a>
+ 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1109/ACCESS.2025.3572985" target="_blank" rel="noopener noreferrer">10.1109/ACCESS.2025.3572985</a>
 	</td></tr>
 	<tr><td>
 		<i>Multi-Modal Remote Sensory Learning for Multi-Objects over Autonomous Devices.</i> Naseer, A., Almudawi, N., Aljuaid, H., Alazeb, A., Alqahtani, Y., Algarni, A., Jalal, A.*, and Liu, H.* (2025). Frontiers in Bioengineering and Biotechnology, 13:1430222. ISSN: 2296-4185.<br>
